# TheRock

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD_TOPOLOGY.toml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FLAGS.cmake  README.md  RELEASES.md  foo  gitleaks.toml  requirements-test.txt  requirements.txt  version.json
.cursor/rules/: rocm-pr-quality.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_linux_jax_wheels.yml  build_native_linux_packages.yml  build_portable_linux_artifacts.yml  build_portable_linux_python_packages.yml  build_portable_linux_pytorch_wheels.yml  build_portable_linux_pytorch_wheels_ci.yml  build_windows_artifacts.yml  build_windows_python_packages.yml  build_windows_pytorch_wheels.yml  build_windows_pytorch_wheels_ci.yml  bump_submodules.yml  ci.yml  ci_downstream_tests.yml  ci_linux.yml  ci_nightly.yml  ci_nightly_pytorch_full_test.yml  ci_windows.yml  codeql.yml  copy_release.yml  gitleaks.yml  gitleaks_main.yml  hip_tagging_automation.yml  manifest-diff.yml  multi_arch_build_linux_jax_wheels.yml  multi_arch_build_native_linux_packages.yml  multi_arch_build_portable_linux.yml  multi_arch_build_portable_linux_artifacts.yml  multi_arch_build_portable_linux_pytorch_wheels.yml  multi_arch_build_portable_linux_pytorch_wheels_ci.yml  multi_arch_build_tarballs.yml  multi_arch_build_windows.yml  multi_arch_build_windows_artifacts.yml  multi_arch_build_windows_pytorch_wheels.yml  multi_arch_build_windows_pytorch_wheels_ci.yml  multi_arch_build_wsl_rocdxg_artifacts.yml  multi_arch_ci.yml  multi_arch_ci_asan.yml  multi_arch_ci_linux.yml  multi_arch_ci_windows.yml  multi_arch_release.yml  (+33 more)
base/: CMakeLists.txt  artifact.toml
base/aux-overlay/: CMakeLists.txt
build_tools/: analyze_build_times.py  artifact_manager.py  build_python_packages.py  build_tarballs.py  bump_submodules.py  compute_rocm_package_version.py  configure_stage.py  fetch_artifacts.py  fetch_dvc_artifacts.py  fetch_sources.py  fileset_tool.py  find_artifacts_for_commit.py  find_latest_artifacts.py  generate_manifest_diff_report.py  generate_therock_manifest.py  index_generation_s3_tar.py  install_additional_requirements.py  install_rocm_from_artifacts.py  linux_portable_build.py  manifest_diff_report_template.html  memory_monitor.py  patch_linux_so.py  pyproject.toml  setup_ccache.py  setup_sccache_rocm.py  setup_venv.py  topology_to_cmake.py  validate_windows_install.ps1
build_tools/_therock_utils/: artifact_backend.py  artifact_builder.py  branch_config.py  build_topology.py  cmake_amdgpu_targets.py  exe_stub_gen.py  pattern_match.py  py_packaging.py  s3_buckets.py  storage_backend.py  workflow_outputs.py
build_tools/detail/: linux_portable_build_in_container.sh
build_tools/github_actions/: amdgpu_family_matrix.py  baseline_runs.py  build_configure.py  bump_automation.py  cleanup_processes.ps1  cleanup_processes.sh  compute_pr_depth.py  compute_pytorch_cache_type.py  configure_ci.py  configure_ci_path_filters.py  configure_downstream_tests.py  configure_multi_arch_ci.py  configure_multi_arch_ci_summary.py  configure_pytorch_release_matrix.py  configure_pytorch_test_matrix.py  configure_rocm_python_test_matrix.py  configure_target_run.py  detect_external_repo_config.py  detect_failed_logs.py  determine_version.py  expand_amdgpu_families.py  fetch_package_targets.py  fetch_test_configurations.py  generate_jax_manifest.py  generate_pytorch_manifest.py  generate_pytorch_source_manifest.py  github_actions_api.py  github_actions_utils.py  manifest_utils.py  new_amdgpu_family_matrix.py  post_build_upload.py  post_stage_upload.py  publish_jax_to_release_bucket.py  publish_pytorch_to_release_bucket.py  publish_pytorch_to_staging.py  publish_rocm_to_release_buckets.py  reproduce_test_failure.py  stage_impact.py  upload_jax_manifest.py  (+6 more)
cmake/: therock_amdgpu_targets.cmake  therock_artifacts.cmake  therock_compiler_config.cmake  therock_default_targets.cmake  therock_primlibs_benchmark_deps.cmake  therock_sanitizers.cmake  therock_subproject.cmake
comm-libs/: CMakeLists.txt
compiler/: CMakeLists.txt  artifact-amd-llvm.toml  pre_hook_amd-comgr.cmake  pre_hook_amd-llvm.cmake
core/: CMakeLists.txt  artifact-core-kfdtest.toml  artifact-core-rocrtst.toml  artifact-core-runtime.toml  post_hook_hrx.cmake  pre_hook_hrx.cmake
cv-libs/: CMakeLists.txt  README.md  artifact-rpp.toml
dctools/: CMakeLists.txt
debug-tools/: CMakeLists.txt  README.md  artifact-rocgdb.toml  pre_hook_rocgdb.cmake
debug-tools/rocgdb/: CMakeLists.txt
dockerfiles/: README.md  build_manylinux_rccl_x86_64.Dockerfile  build_manylinux_x86_64.Dockerfile  install_rocm_deps.sh  install_rocm_packages.sh  install_rocm_tarball.sh  install_rust.sh  no_rocm_image_ubi10.Dockerfile  no_rocm_image_ubuntu24_04_media.Dockerfile  rocm_runtime.Dockerfile
docs/: environment_setup_guide.md
emulation/: CMakeLists.txt  artifact-mirage.toml  artifact-rocjitsu.toml
examples/: CMakeLists.txt  clean_configure_test_project.cmake
iree-libs/: CMakeLists.txt  artifact-fusilliprovider.toml  artifact-iree-compiler.toml  post_hook_fusilli-plugin.cmake
math-libs/: CMakeLists.txt  artifact-composable-kernel.toml  artifact-fft.toml  artifact-hiptensor.toml  artifact-libhipcxx.toml  artifact-prim.toml  artifact-rocalution.toml
math-libs/BLAS/: CMakeLists.txt  artifact-blas.toml
media-libs/: CMakeLists.txt  artifact-rocdecode.toml  artifact-rocjpeg.toml
ml-libs/: CMakeLists.txt  artifact-composable-kernel.toml  artifact-hipblasltprovider.toml  artifact-hipdnn-integration-tests.toml  artifact-hipdnn.toml  artifact-hipkernelprovider.toml  artifact-miopen.toml  artifact-miopenprovider.toml  pre_hook_MIOpen.cmake
profiler/: CMakeLists.txt  artifact-aqlprofile.toml  artifact-rocprofiler-sdk.toml  artifact-rocprofiler-systems-examples.toml  artifact-rocprofiler-systems.toml  post_hook_rocprofiler-systems.cmake
skills/: README.md
storage-libs/: CMakeLists.txt  artifact-hipfile.toml
test_tools/: determine_rocm_test_dependencies.py
tests/: test_artifact_structure.py  test_rocm_sanity.py
(+228 files in other folders)
